src/objects/MUSW__Animal__c.object
<CustomObject>
    <fields>
        <fullName>License_Expiry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>License Date of Expiration</inlineHelpText>
        <label>License Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Tag or Pet ID.</inlineHelpText>
        <label>License No.</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Age_Calc__c</fullName>
        <formula>(TODAY() - MUSW__Date_of_Birth__c) /365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As determined by Date of Birth to Today</inlineHelpText>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Age__c</fullName>
        <label>Age (at last incident)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Breed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Breed</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Color</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If not known exactly, enter 01/01/YYYY for year only age.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Microchip_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>AVID - 9 digits XXX*XXX*XXX
ISO - 10 digits
ISO-EU - 15 digits</inlineHelpText>
        <label>Microchip No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Owned Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Spayed_Neutered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spayed/Neutered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Bird</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Animal</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Breed__c</columns>
        <columns>MUSW__Age__c</columns>
        <columns>MUSW__Description__c</columns>
        <columns>MUSW__Gender__c</columns>
        <columns>MUSW__Primary_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>